# robocol_arm_moveit2

./: CMakeLists.txt  README.md  package.xml
meshes/collision/: v2_finger.stl  v2_hand.stl  v2_hand_complete.stl  v2_link0.stl  v2_link1.stl  v2_link2.stl  v2_link3.stl  v2_link4.stl  v2_link5.stl
meshes/visual/: v2_finger.stl  v2_hand.stl  v2_hand_complete.stl  v2_link0.stl  v2_link1.stl  v2_link2.stl  v2_link3.stl  v2_link4.stl  v2_link5.stl
src/: main_node.cpp  plan_2_arm.cpp  planning_test.cpp
urdf/: robocol_arm.urdf
